Refine C++ coroutine use https://bugs.webkit.org/show_bug.cgi?id=242598

Reviewed by Darin Adler.

Task::promise_type::final_suspend() needs to return a std::experimental::suspend_always instead of a std::experimental::suspend_never, otherwise it crashes if we ever use co_return.  We don't yet, but we probably will.

ReceiveOperation and SendOperation inherit from std::experimental::suspend_never but override await_ready with an implementation more like std::experimental::suspend_always, and an await_suspend that actually does something interesting.  Instead of inheriting from std::experimental::suspend_never, just write out everything it does, which just requires adding an await_resume that returns void.

* Tools/TestWebKitAPI/cocoa/HTTPServer.h:
(TestWebKitAPI::SendOperation::await_resume):

Canonical link: https://commits.webkit.org/252430@main